<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>


    <!-- Кнопка "Поделиться / Share" -->
    <string name="share">Поделиться приложением</string>
    <string name="share_message">Посмотри этот курс по Android-разработке в Практикуме: https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="share_title">Поделиться курсом</string>
    <string name="share_error">Ошибка при попытке поделиться: </string>

    <!-- Кнопка "Написать в поддержку / Support" -->
    <string name="support">Написать в поддержку</string>
    <string name="support_email">danilarothmann@gmail.com</string> <!--support email  -->
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_email_app">На устройстве не найдено приложение для отправки email</string>
    <string name="choose_email_app">Выберите почтовое приложение</string>
    <string name="email_send_error">Не удалось открыть почтовое приложение</string>

    <!-- Кнопка "Пользовательское соглашение / User agreement" -->
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="no_browser_error">Не найдено приложение для открытия браузера</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>

    <!-- Track -->
    <string name="track_name">Название трека</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="track_time" translatable="false">1:01</string>
    <string name="unknown_track">Неизвестный трек</string>
    <string name="unknown_artist">Неизвестный исполнитель</string>

    <!-- Album -->
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>

    <!-- Скринридеры -->
    <string name="track_cover_desc">Обложка трека</string>
    <string name="separator_desc">Разделитель</string>
    <string name="more_info_desc">Подробнее о треке</string>

    <!-- Placeholders -->
    <string name="text_not_found">Ничего не нашлось</string>
    <string name="text_not_connection">Проблемы со связью</string>
    <string name="text_check_connect">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>

    <!-- History and emptySearch -->
    <string name="search_history">Вы искали</string>
    <string name="clean_history"> Очистить историю</string>
    <string name="unknown_year">Год не найден</string>
    <string name="unknown_genre">Жанр не найден</string>
    <string name="unknown_country">Страна не найдена</string>
    <string name="unknown_collection">Альбом не найден</string>

    <!-- Error messages -->
    <string name="browser_error">Ошибка браузера</string>
    <string name="no_app_to_share">Нет приложения для этой функции</string>
    <string name="no_email_app_installed">Нет приложений для отправки электронных писем</string>

    <!-- Media -->
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="not_created_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="play_lists">Плейлисты</string>

    <!-- New PlayList -->
    <string name="title_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="title_NewPlayList">Новый плейлист</string>
    <string name="exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Завершить</string>
    <string name="playlist_created_success">Плейлист \"%s\" создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>

    <!-- Menu PlayList -->
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>

    <!-- Диалоги -->
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <!-- Кнопки -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>


    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="added_to_playlist">Добавлено в плейлист \"%1$s\"</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист \"%1$s\"</string>
    <string name="failed_to_add_track">Не удалось добавить трек в плейлист</string>
    <string name="loading_playlists">Загрузка плейлистов…</string>
    <string name="no_playlists">Нет плейлистов</string>

    <!-- Permission -->
    <string name="permission_required_title">Требуется разрешение</string>
    <string name="permission_required_message">Для выбора обложки плейлиста из галереи необходимо разрешение на доступ к изображениям</string>
    <string name="permission_denied_message">Без разрешения нельзя выбрать изображение из галереи</string>
    <string name="continue_text">Продолжить</string>

    <!-- Редактирование плейлиста -->
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_updated_success">Плейлист "%1$s" обновлен</string>

    <!-- Ошибки создания и редактирования плейлиста -->
    <string name="error_empty_playlist_name">Название плейлиста не может быть пустым</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_load_playlist_data">Не удалось загрузить данные плейлиста</string>
    <string name="error_playlist_not_found">Плейлист не найден</string>
    <string name="error_update_playlist">Ошибка обновления плейлиста</string>

    <string name="about_this_app">«Конструктор плейлистов»\n\nПриложение использует музыкальную базу itunes.apple.com. Пользователь
    получает список песен по запросу, может добавить в избранное, создать плей-лист и добавить / удалить
    из него трек, прослушать тестовый фрагмент. Плейлисты, обложки и настройки приложения сохраняются
    на устройстве пользователя по стредствам БД Room.\nStack: Kotlin, MVVM, Koin, SingleActivity(+Fragments),
    ViewPager2, Jetpack Navigation Component, Корутины, БД Room.
    </string>

    <string name="about_this_app2">ВНИМАНИЕ:\n\nЭто приложение является учебным творческим проектом.
        Приложение опубликовано для демонстрации возможностей стека разработчика и учебного курса ЯндексПрактикума,
        на котором оно делалось. Приложение не является готовым продуктом и не подлежит коммерческому использованию.
    </string>

    <string name="developer">разработчик: Данила Ротман</string>



</resources>