<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/tool_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_16"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/title_22"
        android:textColor="@color/dark_and_white"
        android:text="@string/button_settings" />

    <!-- Переключатель темы -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_marginTop="@dimen/padding_16"
        style="@style/SettingsItemStyle"
        android:text="@string/dark_theme"
        android:contentDescription="@string/dark_theme"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" /> <!-- Цвет дорожки -->

    <!-- Кнопка "Поделиться" -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/share"
        android:text="@string/share"
        android:contentDescription="@string/share"/>

    <!-- Кнопка "Поддержка" -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/support"
        android:text="@string/support"
        android:contentDescription="@string/support"/>

    <!-- Кнопка "Пользовательское соглашение" -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/user_agreement"
        android:text="@string/user_agreement"
        android:contentDescription="@string/user_agreement"/>

    <!-- О приложении -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_12"
        android:text="@string/about_this_app2"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_12"
        android:text="@string/about_this_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_12"
        android:layout_marginBottom="@dimen/padding_24"
        android:text="@string/developer"
        android:fontFamily="@font/ys_text_regular_italic"
        android:textColor="@color/blue"/>



</LinearLayout>