<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginBottom="@dimen/padding_10"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_Medium_22"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_Medium_22"
            app:cornerRadius="@dimen/cornerRadius_16"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding_10"
            app:iconTint="@color/black"
            />


        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_Medium_22"
            app:cornerRadius="@dimen/cornerRadius_16"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding_10"
            app:iconTint="@color/black"
            />


        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_Medium_22"
            app:cornerRadius="@dimen/cornerRadius_16"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding_10"
            app:iconTint="@color/black"
            />

    </LinearLayout>

</LinearLayout>






