<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AudioPlayer">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageButton
            android:id="@+id/toolbar_audioplayer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="@id/left_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/iv_Cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_audioplayer" />

        <TextView
            android:id="@+id/tv_TrackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="Yesterday (Remastered 2009)"
            android:textColor="@color/textColor_AudioPlayer"
            android:textFontWeight="400"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_Cover" />

        <TextView
            android:id="@+id/tv_ArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="The Beatles"
            android:textColor="@color/textColor_AudioPlayer"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_TrackName" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="ib_Seen,ib_Favorite" />

        <ImageButton
            android:id="@+id/ib_Seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@color/white"
            android:src="@drawable/queue"
            app:layout_constraintBottom_toBottomOf="@+id/ib_Play_Stop"
            app:layout_constraintEnd_toStartOf="@+id/ib_Play_Stop"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_ArtistName" />

        <ImageButton
            android:id="@+id/ib_Play_Stop"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="38dp"
            android:background="@color/white"
            android:src="@drawable/play"
            app:layout_constraintEnd_toStartOf="@+id/ib_Favorite"
            app:layout_constraintStart_toEndOf="@+id/ib_Seen"
            app:layout_constraintTop_toBottomOf="@+id/tv_ArtistName" />

        <ImageButton
            android:id="@+id/ib_Favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@color/white"
            android:src="@drawable/favourite"
            app:layout_constraintBottom_toBottomOf="@+id/ib_Play_Stop"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/ib_Play_Stop"
            app:layout_constraintTop_toBottomOf="@+id/tv_ArtistName" />

        <TextView
            android:id="@+id/tv_TrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="0:30"
            android:textColor="@color/textColor_AudioPlayer"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_Play_Stop" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_Duration, tv_СollectionName, tv_ReleaseDate, tv_PrimaryGenreName, tv_Country" />

        <TextView
            android:id="@+id/tv_Duration"
            style="@style/AudioPlayerTrackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_TrackTime" />

        <TextView
            android:id="@+id/tv_DurationValue"
            style="@style/AudioPlayerTrackValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="5:35"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_Duration"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

        <TextView
            android:id="@+id/tv_СollectionName"
            style="@style/AudioPlayerTrackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_name"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_Duration" />

        <TextView
            android:id="@+id/tv_СollectionNameValue"
            style="@style/AudioPlayerTrackValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Yesterday (Remastered 2009)"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_СollectionName"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

        <TextView
            android:id="@+id/tv_ReleaseDate"
            style="@style/AudioPlayerTrackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_СollectionName" />

        <TextView
            android:id="@+id/tv_ReleaseDateValue"
            style="@style/AudioPlayerTrackValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1965"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_ReleaseDate"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

        <TextView
            android:id="@+id/tv_PrimaryGenreName"
            style="@style/AudioPlayerTrackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_genre_name"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_ReleaseDate" />

        <TextView
            android:id="@+id/tv_PrimaryGenreNameValue"
            style="@style/AudioPlayerTrackValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Rock"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_PrimaryGenreName"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

        <TextView
            android:id="@+id/tv_Country"
            style="@style/AudioPlayerTrackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_PrimaryGenreName" />

        <TextView
            android:id="@+id/tv_CountryValue"
            style="@style/AudioPlayerTrackValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Великобритания"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_Country"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>